--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.4.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-auth-kit": "^3.0.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.1",
