--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@iconify/react": "^4.1.1",
+    "axios": "^1.6.5",
     "axios-hooks": "^5.0.2",
     "formik": "^2.4.5",
     "prop-types": "^15.8.1",
