--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.5",
     "axios-hooks": "^5.0.2",
     "formik": "^2.4.5",
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.7",
