--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth-kit/react-router": "^3.0.2-alpha.0",
     "@iconify/react": "^4.1.1",
+    "@tinymce/tinymce-react": "^4.3.2",
     "axios": "^1.6.5",
     "axios-hooks": "^5.0.2",
     "formik": "^2.4.5",
