--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios-hooks": "^5.0.2",
     "formik": "^2.4.5",
     "he": "^1.2.0",
+    "html-react-parser": "^5.1.1",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
